# Lab01OperatingSystems

./: .clang-tidy  .gitignore  CMakeLists.txt  commands.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml  lab1-ci.yml
benchmark/: CMakeLists.txt
cmake/: CompileOptions.cmake  FindGBenchmark.cmake  FindGTest.cmake
lib/: lab2_library.hpp
source/: CMakeLists.txt
source/loaders/arg-printer/: main.cpp
source/loaders/ema-ram-sort-int/: UnifiedMemorySorter.cpp  UnifiedMemorySorter.hpp  main.cpp
source/loaders/ema-sort-int/: ExternalMemorySorter.cpp  ExternalMemorySorter.hpp  main.cpp
source/loaders/ema-sort-int-directio/: DirectIoExternalMemorySorter.cpp  DirectIoExternalMemorySorter.hpp  main.cpp
source/loaders/estimate-csort/: main.cpp
source/loaders/ram-sort-int/: RamMemorySorter.cpp  RamMemorySorter.hpp  main.cpp
source/loaders/ram-sort-int-directio/: DirectIoRamMemorySorter.cpp  DirectIoRamMemorySorter.hpp  main.cpp
source/loaders/sleeper/: Sleeper.cpp  Sleeper.hpp
source/loaders/util/: ema_ram_sorter_cli_constants.hpp  sorter_utils.cpp  sorter_utils.hpp
source/monolith/app/: Main.cpp
source/monolith/loaders/sleeper/: Sleeper.cpp
source/monolith/shell/: Command.cpp  Command.hpp  CommandFactory.cpp  CommandFactory.hpp  Shell.cpp  Shell.hpp
source/monolith/shell/commands/: ChangeDirectoryCommand.cpp  ExitCommand.cpp  ExitCommand.hpp  HelpCommand.cpp  HelpCommand.hpp  HistoryCommand.cpp  HistoryCommand.hpp  ListFilesCommand.cpp  ListFilesCommand.hpp  ListProcessesCommand.cpp  ListProcessesCommand.hpp  PathToWorkingDirectoryCommand.cpp  PathToWorkingDirectoryCommand.hpp  RunCommand.cpp  RunCommand.hpp  RunNonBlockingCommand.cpp  RunNonBlockingCommand.hpp  RunNonBlockingForCommand.cpp  RunNonBlockingForCommand.hpp
source/monolith/shell/shell/: Command.cpp  Shell.hpp
source/monolith/shell/shell/commands/: ChangeDirectoryCommand.cpp  ChangeDirectoryCommand.hpp  ExitCommand.cpp  HelpCommand.cpp  HelpCommand.hpp  RunCommand.cpp  RunCommand.hpp
source/monolith/shell/shell/util/: path_functions.cpp
source/monolith/shell/util/: path_functions.cpp  path_functions.hpp  run_functions.cpp  run_functions.hpp  string_functions.cpp  string_functions.hpp  unistd_check.hpp
test/: CMakeLists.txt
test/monolith/: ExternalMemorySorterTestSuite.cpp  RamMemorySorterTestSuite.cpp  ShellTestSuite.cpp  StringFunctionsTestSuite.cpp  TestMain.cpp
